fix modal make horizontal scroll appear

--- a/src/containers/practice/practice.style.scss
+++ b/src/containers/practice/practice.style.scss
@@ -1,5 +1,4 @@
 .practice-video-modal {
-  width: 100vw;
   height: 100vh;
   .ReactModal__Content {
     &--after-open {
